tidy up contact styles and work example styles

--- a/src/app/components/section-contact/section-contact.component.html
+++ b/src/app/components/section-contact/section-contact.component.html
@@ -7,7 +7,7 @@
             <h2>Contact</h2>
           </div>
         </div>
-        <div class="container container-md-70">
+        <div class="container container-md-70 offset-top">
           <div class="text-container">
             <div class="text-block text-block-md-50">
               <p>Consectetur adipisicing elit sed eiusmod tempor incididunt ut dolore magna labore eiusmod. Lorem ipsum dolor sit amet consectetur est adipisicing elit, sed do eiusmod tempor.</p>
