--- a/src/app/components/work-example/work-example.component.html
+++ b/src/app/components/work-example/work-example.component.html
@@ -1,27 +1,29 @@
 <div id="work-example">
   <div class="content">
-    <div class="icon-container" routerLink="/">
-      <div class="icon icon-cross"></div>
-    </div>
-    <div class="image-container">
-      <img src="/assets/images/item_img_01.jpg">
-    </div>
-    <div class="image-container image-container-50">
-      <img src="/assets/images/item_img_02.jpg">
-    </div>
-    <div class="image-container image-container-50">
-      <img src="/assets/images/item_img_03.jpg">
-    </div>
-    <div class="text-container text-container-md-50">
-      <span>Project Name: <p>Handmade</p></span>
-      <span>Client: <p>Est Lorem</p></span>
-      <span>Year: <p>2017</p></span>
-      <button>Download</button>
-    </div>
-    <div class="text-container text-container-md-50">
-      <strong>Handmade for Everyone</strong>
-      <p>We choose to go to the moon in this decade and do the other things, not because they are easy.</p>
-      <p>Because they are hard, because that goal will serve to organize and measure the best of our energies and skills, because that challenge is one that we are willing to accept, one we are unwilling to postpone and one.</p>
+    <div class="row">
+      <div class="icon-container" routerLink="/">
+        <div class="icon icon-cross"></div>
+      </div>
+      <div class="image-container">
+        <img src="/assets/images/item_img_01.jpg">
+      </div>
+      <div class="image-container image-container-50">
+        <img src="/assets/images/item_img_02.jpg">
+      </div>
+      <div class="image-container image-container-50">
+        <img src="/assets/images/item_img_03.jpg">
+      </div>
+      <div class="text-container text-container-md-50 text-container-white">
+        <span>Project Name: <p>Handmade</p></span>
+        <span>Client: <p>Est Lorem</p></span>
+        <span>Year: <p>2017</p></span>
+        <button>Download</button>
+      </div>
+      <div class="text-container text-container-md-50 text-container-white">
+        <strong>Handmade for Everyone</strong>
+        <p>We choose to go to the moon in this decade and do the other things, not because they are easy.</p>
+        <p>Because they are hard, because that goal will serve to organize and measure the best of our energies and skills, because that challenge is one that we are willing to accept, one we are unwilling to postpone and one.</p>
+      </div>
     </div>
   </div>
 </div>
