--- a/src/app/styles/components/_containers.scss
+++ b/src/app/styles/components/_containers.scss
@@ -86,6 +86,10 @@
     @media(min-width: $screen-md) {
       width: 55%;
     }
+  }    
+  @media(min-width: $screen-lg) {
+    max-width: 1200px;
+    margin: 0 auto;
   }
 
   &.text-container-md-50 {
