consolidate css + remove duplicates

--- a/src/app/components/section-intro/section-intro.component.html
+++ b/src/app/components/section-intro/section-intro.component.html
@@ -1,4 +1,4 @@
-<div id="section-intro">
+<div id="section-intro" class="section-container">
   <div class="content">
     <div class="image-container"></div>
     <h1>We Craft Awesome Web And Graphic Design Solutions</h1>
