--- a/src/app/components/section-news/section-news.component.html
+++ b/src/app/components/section-news/section-news.component.html
@@ -1,4 +1,4 @@
-<div id="section-news">
+<div id="section-news" class="section-container">
   <div class="content">
     <div class="row">
       <div class="container container-md-70 offset-top">
