--- a/src/app/components/section-services/section-services.component.html
+++ b/src/app/components/section-services/section-services.component.html
@@ -1,4 +1,4 @@
-<div id="section-services">
+<div id="section-services" class="section-container">
   <div class="content">
     <div class="row">
       <div class="container container-md-30">
