--- a/src/app/components/section-skills/section-skills.component.html
+++ b/src/app/components/section-skills/section-skills.component.html
@@ -1,4 +1,4 @@
-<div id="section-skills">
+<div id="section-skills" class="section-container">
   <div class="content">
     <div class="row">
       <div class="container container-md-30">
