--- a/src/app/components/section-portfolio/section-portfolio.component.html
+++ b/src/app/components/section-portfolio/section-portfolio.component.html
@@ -1,4 +1,4 @@
-<div id="section-portfolio">
+<div id="section-portfolio" class="section-container">
   <div class="content">
     <div class="row">
       <div class="container container-md-70 offset-top">
