--- a/src/app/styles/components/_containers.scss
+++ b/src/app/styles/components/_containers.scss
@@ -51,6 +51,17 @@
   }
 }
 
+.section-container {
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 160px;
+  width: 100%;
+
+  @media(min-width: $screen-md) {
+    padding-bottom: 0;
+  }
+}
+
 .image-container {
   width: 100%;
   
